[metadata]
name = pcss-vendor-metadata
description-file =
    README.rst
license = Apache License
summary = Nova vendor metadata provider for PCSS HPC cloud
author = Qianbiao.NG
author_email = iampurse@vip.qq.com
home-page = https://github.com/IamFive/pcss-vendor-metadata
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Intended Audience :: Developers
    Topic :: Utilities
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Development Status :: 4 - Beta

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
data_files =
    /etc/pcss-vendor-metadata =
        files/pcss-vendor-metadata-api-paste.ini
        files/pcss-vendor-metadata.ini.sample
        files/pcss-vendor-metadata-server.service.sample

packages =
    pcss_vendor_metadata

[wheel]
universal = 1

[entry_points]
oslo.config.opts =
    pcss.vendordata.service = pcss_vendor_metadata.conf:list_opts
    pcss.vendordata.neutron = pcss_vendor_metadata.conf.neutron:list_opts

console_scripts =
    pcss-vendor-metadata-svc = pcss_vendor_metadata.wsgi:main
